tests/NormalTests/paczka1/small_fuzzy/27253678.err
Error in line 8: RhgbQEoS S523 80,4
Error in line 6: 6kPKZDouFc S523 71,6
